--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -10,7 +10,7 @@ fapolicyd.rules \- fapolicyd rules to determine access rights
 
 .SS Access
 The decision is either
-.IR control allow " or " deny ".
+.IR allow " or " deny ".
 If the rule triggers, this is the access decision that fapolicyd will tell the kernel.
 
 .SS Subject
