--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.8.2
 - Add seccomp filter support
 - Fix leaked descriptor in exe_type processing
+- Add LRU cache for subject and objects
 
 0.8.1
 - Documentation updates
