--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@ Userspace
 Fix spec file to create a user
 Update systemd service file to use default user
 Write statistics on shutdown
+Change attribute access to hash table
+Improve the object hash for better cache utilization
 Allow globbing
 Add audit option
 Add ability to identify suspicious sequences
