Adjust inter-thread queue default size

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Add LRU cache for subject and objects
 - Create fapolicyd user on install
 - Update systemd service file to run as user fapolicyd
+- Adjust inter-thread queue default size
 
 0.8.1
 - Documentation updates
