Finish log file support

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -41,6 +41,9 @@ caused fapolicyd to discontinue processing events and exit.
 .P
 .B /etc/fapolicyd/fapolicyd.mounts
 - lists partitions to control access to
+.P
+.B /var/log/fapolicyd-access.log
+- information about what was being accessed.
 
 .SH "SEE ALSO"
 .BR fapolicyd.rules (5)
