Deny access to stale pid's or fd's

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,7 @@
 - Adjust inter-thread queue default size
 - Write statistics on shutdown
 - Change attribute access to hash table
+- Deny access to stale pid's or fd's
 
 0.8.1
 - Documentation updates
