This patch adds a new pattern based functionality.

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -20,7 +20,7 @@ leave the daemon in the foreground for debugging. Event information is written t
 leave the daemon in the foreground for debugging. Event information is written to stderr only when the decision is to deny access.
 .TP
 .B \-\-permissive
-the daemon will allow file access regardless of the policy decision. This is usefule for debugging rules before making them permanent.
+the daemon will allow file access regardless of the policy decision. This is useful for debugging rules before making them permanent.
 .TP
 .B \-\-boost\ NN
 increase the daemon's scheduling priority by this much. The number should be positive and less than 20. The default boost is 10.
