--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 0.8.3
 - Add audit support for the linux-4.15 kernel
 - Don't close report descriptor in report
+- Fix busy loop to use poll as originally intended
 
 0.8.2
 - Add seccomp filter support
