Reinstate strong umask before writing report

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.8.4
 - Mask signals from deadman's switch
+- Reinstate strong umask before writing report
 
 0.8.3
 - Add audit support for the linux-4.15 kernel
