--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 0.8.6
 - Add some systemd process protections
+- Update object hash calculation to better determine uniqueness
 
 0.8.5
 - Update spec file and license info
