--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@ Hand userspace a fstat buf for object with event
 
 Userspace
 =========
+Verify database startup and ownership, group
 Add admin defined whitelist of dirs or files
 Add ability to detect bad interpreter
 Support execute events for better subj cache utilization
