--- a/TODO
+++ b/TODO
@@ -5,13 +5,18 @@ Hand userspace a fstat buf for object with event
 
 Userspace
 =========
-Verify database startup and ownership, group is correct
 Find where miscompares of database is coming from
+Does reversing path string improve lookup performance?
+Handle long paths by hashing it (lmdb has 511 byte limit) (Which hash to use?)
+During startup, update database with current trust sources
+During startup, block accesses while sync'ing trust database
 Handle dnf & rpm updates including updating the database
 Add admin defined whitelist of dirs or files
+Add sighup handler
 Add ability to detect bad interpreter
+Add file verification scrubber and update database status
+Use the verified status in decisions
 Support execute events for better subj cache utilization
 Support SWID as trust source
-Add sighup handler
 Allow globbing
 
