Add documentation for fapolicyd.conf

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -50,6 +50,8 @@ caused fapolicyd to discontinue processing events and exit.
 
 .SH "SEE ALSO"
 .BR fapolicyd.rules (5)
+and
+.BR fapolicyd.conf (5)
 
 .SH AUTHOR
 Steve Grubb
