--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -112,6 +112,8 @@ The following rules show how rules may look.
 
 .SH "SEE ALSO"
 .BR fapolicyd (8)
+and
+.BR fapolicyd.conf (5)
 
 .SH AUTHOR
 Steve Grubb
