--- a/TODO
+++ b/TODO
@@ -13,6 +13,7 @@ Handle dnf & rpm updates including updating the database
 Add admin defined whitelist of dirs or files
 Add sighup handler
 Add ability to detect bad interpreter
+Harden elf_gather by sanity checking sizes
 Handle HAS_ERROR in elf pattern processing
 Add file verification scrubber and update database status
 Use the verified status in decisions
