Fix typo in fapolicyd.rules manpage

--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -62,7 +62,7 @@ The \fIexecdirs\fP option will match against the following list of directories:
 The \fIexecdirs\fP option will match against the same list as \fIexecdirs\fP but also includes /etc/.
 .TP 12
 .B untrusted
-The \fIuntrusted\fP option will look up the current executable's full path in the rpm database to see if the execuatble is known to the system. The rule will trigger if the file in question is not packaged.
+The \fIuntrusted\fP option will look up the current executable's full path in the rpm database to see if the executable is known to the system. The rule will trigger if the file in question is not packaged.
 .RE
 .TP
 .B exe_type
