Document the --no-details command line option in a man page

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -33,6 +33,9 @@ run as a particular user rather than root. This may either be numeric or a user 
 .TP
 .B \-\-group\ NN
 run using a particular group rather than root. This may either be numeric or a user name from the passwd database.
+.TP
+.B \-\-no-details
+when fapolicyd ends, it dumps a usage report with vaious statistics that meay be useful for tuning performeance. It can also detail which processes it knew about and files being accessed by them. This can be useful for foresics investigations. In some settings, this may not be desirable as the file names may be sensitive. Using this option removes process and file names leaving only the statistics. The default without giving this option is to generate a full report.
 .SH SIGNALS
 .TP
 SIGTERM
