--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -78,7 +78,7 @@ This option will match against the device that the executable resides on. To use
 .RE
 
 .SS Object
-The object is the file that the subject is interacting with. The fields in the rule that describe the obbject are written in a name=value format. There can be one or more object fields. Each field is and'ed with others to decide if a rule triggers. The name can be any of the following:
+The object is the file that the subject is interacting with. The fields in the rule that describe the object are written in a name=value format. There can be one or more object fields. Each field is and'ed with others to decide if a rule triggers. The name can be any of the following:
 
 .RS
 .TP 12
