Add documentation for the patterns that fapolicyd can detect

--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -5,7 +5,7 @@ fapolicyd.rules \- fapolicyd rules to determine access rights
 \fBfapolicyd.rules\fP is a file that contains the rules that \fBfapolicyd\fP uses to make decisions about access rights. The rules follow a simple format of:
 
 .nf
-.B access decision subject object
+.B access subject object
 .fi
 
 They are evaluated from top to bottom with the first rule to match being used
@@ -75,6 +75,26 @@ This option takes the mime type of a file as an argument. If you wish to check t
 .TP
 .B exe_device
 This option will match against the device that the executable resides on. To use it, start with /dev/ and add the target device name.
+
+.TP
+.B pattern
+There are various ways that an attacker may try to execute code that may reveal itself in the pattern of file accesses made during program startup. This rule can take one of several options depending on which access patterns is wished to be blocked. Fapolicyd is able to detect these different access patterns and provide the access decision as soon as it identifies the pattern. The pattern type can be any of:
+
+.RS
+.TP 12
+.B normal
+This matches against any ELF program that is dynamically linked.
+.TP
+.B ld_preload
+This matches against access patterns that indicate that LD_PRELOAD is being used in starting up the application.
+.TP
+.B bad_interpreter
+This matches against access patterns that indicate that the defaul ELF interpreter is not being used.
+.TP
+.B ld_so
+This matches against access patterns that indicate that the program is being started directly by the runtime linker.
+.RE
+
 .RE
 
 .SS Object
@@ -107,6 +127,7 @@ The following rules show how rules may look.
 .nf
 .B deny_audit exe=/usr/bin/wget dir=/tmp
 .B allow exe=/usr/bin/python3.4 dir=execdirs ftype=text/x-python
+.B deny_audit pattern ld_preload all
 .B deny all all
 .fi
 
