Revise default settings for better performance

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Fix segfault for rules whose subject is number oriented
 - When database problem is found on startup, rebuild database
 - Don't flush empty caches on database rebuild
+- Revise default settings for better performance
 
 0.8.9
 - Systemd usage updates
