manpage for fapolicyd-cli added

--- a/doc/fapolicyd.8
+++ b/doc/fapolicyd.8
@@ -1,4 +1,4 @@
-.TH "FAPOLICYD" "8" "June 2018" "Red Hat" "System Administration Utilities"
+.TH "FAPOLICYD" "8" "July 2019" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd \- File Access Policy Daemon
 .SH SYNOPSIS
@@ -58,6 +58,7 @@ To get audit events, you must have auditing enabled and at least one systemcall 
 - information about what was being accessed.
 
 .SH "SEE ALSO"
+.BR fapolicyd-cli (1),
 .BR fapolicyd.rules (5)
 and
 .BR fapolicyd.conf (5)
