--- a/doc/fapolicyd.rules.5
+++ b/doc/fapolicyd.rules.5
@@ -1,4 +1,4 @@
-.TH FAPOLICYD.RULES: "7" "May 2016" "Red Hat" "System Administration Utilities"
+.TH FAPOLICYD.RULES: "7" "July 2019" "Red Hat" "System Administration Utilities"
 .SH NAME
 fapolicyd.rules \- fapolicyd rules to determine access rights
 .SH DESCRIPTION
@@ -129,7 +129,8 @@ The following rules show how rules may look.
 .fi
 
 .SH "SEE ALSO"
-.BR fapolicyd (8)
+.BR fapolicyd (8),
+.BR fapolicyd-cli (1)
 and
 .BR fapolicyd.conf (5)
 
