--- a/TODO
+++ b/TODO
@@ -4,18 +4,18 @@ Hand userspace fstat results for object with event (currently get a fd)
 
 Userspace
 =========
+Harden elf_gather by sanity checking sizes
+Detect static ELF programs
+Handle HAS_ERROR in elf pattern processing
 Does reversing path string improve lookup performance?
 Handle long paths by hashing it (lmdb has 511 byte limit) (Which hash to use?)
 During startup, update database with current trust sources
 During startup, block accesses while sync'ing trust database
+Add file verification scrubber and update database status
+Use the verified status in decisions
 Handle rpm updates including updating the database
 Add admin defined whitelist of dirs or files
 Add sighup handler
-Harden elf_gather by sanity checking sizes
-Handle HAS_ERROR in elf pattern processing
-Add file verification scrubber and update database status
-Use the verified status in decisions
-Support execute events for better subj cache utilization
 Support SWID as trust source
 Allow globbing
 
