--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,7 @@
 - Convert hashes to lowercase like sha256sum outputs
 - Use FAN_OPEN_EXEC_PERM for subject cache management
 - Add static pattern detection
+- Performance improvements
 
 0.8.10
 - Fix segfault for rules whose subject is number oriented
