--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 - Performance improvements
 - Switch from static mounts to hotplug configuration of mount points
 - Dont collect documentation in trust database
+- When path is longer than lmdb can store, use a sha512 hash (Attila Lakatos)
 
 0.8.10
 - Fix segfault for rules whose subject is number oriented
