Finalize fapolicyd-0.9 release

--- a/TODO
+++ b/TODO
@@ -1,9 +1,13 @@
 Kernel
 ======
-Hand userspace fstat results for object with event (currently get a fd)
+Fix double events. Getting one for exec and one for perm
+Fix ld.so to not be an execution unless it really is
 
 Userspace
 =========
+Add admin defined whitelist of dirs or files
+Make use of librpm optional
+Handle rpm updates including updating the database
 Handle double events (exec_perm/open_perm)
 Fix new pattern detection and swing between them based on exec_perm support
 Bring back LD_PRELOAD detection
@@ -12,8 +16,6 @@ During startup, update database with current trust sources
 During startup, block accesses while sync'ing trust database
 Add file verification scrubber and update database status
 Use the verified status in decisions
-Handle rpm updates including updating the database
-Add admin defined whitelist of dirs or files
 Add sighup handler
 Support SWID as trust source
 Allow globbing
