--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 - Expose file type in debug output
 - Update rules for ansible and dracut
 - Skip config files in database check
+- Expand definition of doc files
 
 0.9
 - Convert hashes to lowercase like sha256sum outputs
