--- a/TODO
+++ b/TODO
@@ -1,14 +1,12 @@
 Kernel
 ======
-Fix double events. Getting one for exec and one for perm
 Fix ld.so to not be an execution unless it really is
 
 Userspace
 =========
+Settle on rule new sytax
 Add admin defined whitelist of dirs or files
 Make use of librpm optional
-Handle rpm updates including updating the database
-Handle double events (exec_perm/open_perm)
 Fix new pattern detection and swing between them based on exec_perm support
 Bring back LD_PRELOAD detection
 Does reversing path string improve lookup performance?
@@ -17,6 +15,6 @@ During startup, block accesses while sync'ing trust database
 Add file verification scrubber and update database status
 Use the verified status in decisions
 Add sighup handler
-Support SWID as trust source
 Allow globbing
+Support SWID as trust source
 
