--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 0.9.2
+- Split codebase into daemon, library and cli
+- Add Admin defined trust database
 
 0.9.1
 - Make watched filesystems configurable
